--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>H3 Heading</title>
-  <link rel="stylesheet" type="text/css" href="./style.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen"/>
 </head>
 <body>
     <h3>How The Internet Works.</h3>
